css/style.css
@font-face {
  font-family: "Vazir";
  src: url(../public/assets/fonts/Vazir/Vazir-FD-WOL.ttf) format(truetype);
}
@font-face {
  font-family: "Vazir";
  src: url(../public/assets/fonts/Vazir/Vazir-FD-WOL.woff) format(woff);
}
@font-face {
  font-family: "Vazir";
  src: url(../public/assets/fonts/Vazir/Vazir-FD-WOL.woff2) format(woff2);
}
@font-face {
  font-family: "Vazir-bold";
  src: url(../public/assets/fonts/Vazir/Vazir-Bold-FD-WOL.ttf) format(truetype);
  font-weight: 600;
}
@font-face {
  font-family: "Vazir-bold";
  src: url(../public/assets/fonts/Vazir/Vazir-Bold-FD-WOL.woff) format(woff);
  font-weight: 600;
}
@font-face {
  font-family: "Vazir-bold";
  src: url(../public/assets/fonts/Vazir/Vazir-Bold-FD-WOL.woff2) format(woff2);
  font-weight: 600;
}
:root {
  --color-white: #fff;
  --color-white-100: #f0f0f0;
  --color-black: #000;
  --color-gray: #676767;
  --color-gray-dark: #333;
  --color-gray-light: #c5c5c5;
  --color-green-dark: #00aa9d;
  --color-green-light: #00beb0;

  --color-green: #1eb35b;
  --color-lamp: #f0ef7c;

  --color-theme: #f3f4f6;
  --color-theme-wrapper: #fff;
  --color-theme-text: #000;
  --color-theme-text-light: #676767;
  --color-theme-bg-light: #f3f4f6;
  --color-theme-link-active: #1eb35b;

  font-family: "Vazir";
}
body.dark-theme {
  --color-theme: #111827;
  --color-theme-wrapper: #64748b;
  --color-theme-text: #fff;
  --color-gray-light: #fff;
  --color-theme-text-light: #676767;
  --color-theme-bg-light: #f3f4f6;
  --color-theme-link-active: #0a97d4;
  --color-lamp: #abf9ff;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: var(--color-theme);
  overflow-x: hidden;
  overflow-y: auto;
}
/*header*/
/*navbar*/
.header__top {
  width: 100vw;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-white);
  box-shadow: 0 0 2px 1px var(--color-gray-light);
  backdrop-filter: blur(10px);
}
.navbar__wrapper {
  height: 90%;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
  width: 1400px;
}
.navbar__wrapper__logo {
  align-items: center;
  justify-content: center;
  width: 150px;
}
.navbar__wrapper__logo a {
  width: 70px;
}
.navbar__wrapper__links {
  width: 800px;
}
.navbar__links {
  width: 100%;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
  column-gap: 32px;
}
.navbar__link {
  padding: 10px 0px;
}
.nav-link {
  position: relative;
  text-align: center;
  font-size: 18px;
  color: var(--color-black);
  &::after {
    content: "";
    height: 3px;
    background-color: var(--color-theme-link-active);
    width: 0;
    position: absolute;
    bottom: -6px;
    right: 0;
    transition: all 300ms ease;
  }
  &:hover::after {
    width: 100%;
  }
  /*change url highlight link */
  &.active {
    font-family: "Vazir-bold";
    font-weight: 600;
    color: var(--color-theme-link-active);
  }
}

.navbar__wrapper__theme-changer {
  align-items: center;
  justify-content: center;
  width: 150px;
}
.navbar__wrapper__theme-changer span {
  display: flex;
  align-items: center;
  position: relative;
  width: 40%;
  height: 32px;
  padding: 12px 6px;
  border-radius: 20px;
  background-color: var(--color-theme-link-active);
  cursor: pointer;
}
.navbar__wrapper__theme-changer span img {
  position: absolute;
  width: 24px;
  left: 6px;
  border-radius: 50%;
  background-color: var(--color-lamp);
}

/*helper classes*/
.d-flex {
  display: flex;
}
.bg-white {
  background-color: var(--color-white);
}
/*main*/
main {
  height: 550px;
}

/*footer*/
footer {
  width: 100vw;
  height: auto;
  background-color: var(--color-white);
  box-shadow: 0 0 2px 1px var(--color-gray-light);
  backdrop-filter: blur(10px);
}
.footer__top {
  display: flex;
  align-items: center;
  justify-content: center;
}
.footer__wrapper {
  height: 90%;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
  width: 1400px;
}

.footer__wrapper__socials ul {
  padding: 48px 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 48px;
}
.footer__wrapper__socials ul li {
  cursor: pointer;
  background-color: var(--color-theme-bg-light);
  border-radius: 50%;
  width: 64px;
  height: 64px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 300ms ease;
  &:hover {
    background-color: var(--color-theme-link-active);
    transform: scale(1.2);
  }
}

.footer__wrapper__socials ul li a img {
  width: 42px;
}
.footer__wrapper__links ul {
  display: flex;
  align-items: center;
  justify-content: center;
  direction: rtl;
  padding: 20px 0 40px;
  gap: 120px;
}
.footer__wrapper__links ul li {
  font-size: 20px;
  color: var(--color-theme-text-light);
  transition: all 300ms ease;
  &:hover {
    color: var(--color-theme-link-active);
    transform: scale(1.2);
  }
}

.footer__bottom {
  padding: 10px 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.footer__bottom__copy-right {
  width: 80%;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 10px;
  border-top: 2px solid var(--color-gray-light);
  color: var(--color-theme-text-light);
}

